Bug 1391770 - Don't allow a faraway second tap to start a one-touch-pinch gesture. r=botond, a=lizzard

This patch adds a new tolerance pref, which controls how far the second touchdown
is allowed to be from the first touchdown when detecting a multi-tap gesture
such as double-tap or one-touch-pinch. This stops the one-touch-pinch code
from inadvertently triggering when the user does a tap followed by a second tap
far away from the first.

The default value for the new pref is 5x the touch-start tolerance pref. This
seems to provide a reasonable behaviour for me, although this value could
probably be tuned.

MozReview-Commit-ID: 63aAyGCbvoN